feature/backend/認証状態判定のためのapiを実装
